Revert "fix(frontend): add styles to avoid title overflowing ss-634"
This reverts commit 8a47a5a71cc3e8e2371f7d169bf3e5c0df1b5d8d.

--- a/apps/frontend/src/pages/points-of-interest-details/styles.module.css
+++ b/apps/frontend/src/pages/points-of-interest-details/styles.module.css
@@ -24,8 +24,6 @@
 
 .label {
 	margin: 0;
-	overflow: hidden;
-	text-overflow: ellipsis;
 	font-size: var(--font-size-h1);
 	font-weight: var(--font-weight-semibold);
 	line-height: 1.2;
@@ -69,7 +67,7 @@
 	}
 }
 
-@media (width <=480px) {
+@media (width <= 480px) {
 	.container {
 		padding: 24px;
 	}
